# libdouble-conversion

./: .gitignore  AUTHORS  Makefile.in  NEWS  README  aclocal.m4  config.status  configure  configure.ac  libtool
config/: config.h
example/: README  cctest.cc  cctest.h  testdbl.cc
src/: Makefile.in
